# routes/account.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
-const {signIn,signOut,signUp} = require('../controllers/account');
+const {signIn,signOut,signUp,editPassword} = require('../controllers/account');
+
 
 
 
@@ -7,6 +8,7 @@ const {signIn,signOut,signUp} = require('../controllers/account');
 router.post('/signin', signIn);
 router.post('/signup', signUp);
 router.get('/signout', signOut);
+router.post("/editPassword", editPassword);
 
 
 
